Align the feat/signing branch with the origin/main